fix absolute position bug for footer on ios safari

--- a/src/styles/components/_curtain.scss
+++ b/src/styles/components/_curtain.scss
@@ -40,5 +40,8 @@
   }
   &--contact {
     background-color: $yellow;
+    @media only screen and (max-width: $bp-600) {
+      height: 100rem;
+    }
   }
 }
